feat:api-gateway:openapi.yaml, verification logic modified, member-auth-service:RTR, refrsh-token added
